cabal-version:      2.4
name:               aoc2023
version:            0.1.0.0

data-dir: data

extra-source-files: CHANGELOG.md

executable aoc2023
    main-is:          Main.hs
    hs-source-dirs:   src
    default-language: Haskell2010

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:

    -- Modules included in this executable, other than Main.
    other-modules:
      Day01
      Day02
      Paths_aoc2023

    build-depends:
      base ^>=4.17.2.0
